# llmrouter

./: .gitignore  LEARNINGS.md  LICENSE  Makefile  README.md  TRAINING_AND_TUNING.md  TUNING.md  config.yaml  docker-compose.yaml  go.mod  go.sum  prometheus.yml
.github/: pull_request_template.md
.github/workflows/: append-learnings.yml
benchmarks/: cache_bench_test.go
benchmarks/data/: corpus_clustered.json  corpus_realistic.json
benchmarks/dumporder/: main.go
benchmarks/python/: README.md  eval_quality.py  label_eval.py  label_quality.py  pick_threshold.py  pyproject.toml  sweep_hitrate.py
benchmarks/python/results/: false_hit_rate_sweep.csv  hitrate_sweep.csv
cmd/llmrouter/: main.go
grafana/dashboards/: llmrouter.json
grafana/provisioning/dashboards/: dashboards.yml
internal/cache/: cache.go  redis.go  redis_test.go
internal/config/: config.go  config_test.go
internal/embedder/: embedder.go  embedder_test.go
internal/metrics/: metrics.go
internal/provider/: anthropic.go  anthropic_test.go  errors.go  errors_test.go  google.go  google_test.go  helpers_test.go  provider.go
internal/provider/testdata/cassettes/: anthropic_chat_completion.yaml  anthropic_chat_completion_stream.yaml  anthropic_error_401.yaml  anthropic_error_429.yaml  anthropic_error_500.yaml  (+6 more)
internal/router/: classifier.go  router.go  router_test.go
internal/server/: handler.go  handler_test.go  server.go
internal/stream/: stream.go  stream_test.go
training/: build_corpus.py  collect_dataset.py  export_onnx.py  label_quality.py  pyproject.toml  train_classifier.py
